...
        isMapDisplayed,
        isReviewing,
        text,
        writeNewRating,
        isOnline)
  } else {
    MoreInfoMap(
        goToMarker,
        discoverScreenCallBacks,
        discoverScreenState,
        activityToDisplay,
        currentUser,
        downloadActivity,
...
    isReviewing: MutableState<Boolean>,
    text: MutableState<String>,
    writeNewRating: (String, Rating, String) -> Unit,
    isOnline: ConnectionState
) {
  Column(
      modifier = Modifier.fillMaxSize().testTag("MoreInfoComposable"),
      verticalArrangement = Arrangement.SpaceBetween) {
        UpperMoreInfo(
            activityToDisplay,
            currentUser,
            discoverScreenState,
            discoverScreenCallBacks,
...
            flipFavorite,
            friends,
            shareToFriend,
            updateDifficulty,
            isOnline)
        Column {
          WeatherReportBig(weather, true) { weatherDialog.value = true }
          // displays activity difficulty, ration and view on map button
          MiddleZone(
              activityToDisplay,
              isMapDisplayed,
              isReviewing,
              text,
...
}

// Start button : once clicked, the activity tracking starts
@Composable
fun StartButton(navigateToTracking: () -> Unit, isOnline: ConnectionState) {
  Row(
      modifier = Modifier.fillMaxWidth().testTag("MoreInfoStartButton"),
      horizontalArrangement = Arrangement.Center) {
        ElevatedButton(
            onClick = { navigateToTracking() },
            modifier = Modifier.fillMaxWidth(0.6f).height(48.dp), // takes up 80% of the width
            colors = ButtonDefaults.buttonColors(containerColor = PrimaryBlue),
            enabled = isOnline == ConnectionState.CONNECTED) {
...
    currentUser: UserModel?,
    isOnline: ConnectionState
) {
  Row(
      modifier =
          Modifier.fillMaxWidth()
              .testTag("MoreInfoMiddleZone")
              .padding(vertical = 0.dp, horizontal = 16.dp),
      horizontalArrangement = Arrangement.SpaceBetween) {
        RatingLine(activityToDisplay, isReviewing, text, writeNewRating, currentUser, isOnline)
        ViewOnMapButton(isMapDisplayed, isOnline)
      }
  SeparatorComponent()
}

// Button to view the activity on the map
@Composable
fun ViewOnMapButton(isMapDisplayed: MutableState<Boolean>, isOnline: ConnectionState) {
  Column(
      modifier = Modifier.padding(vertical = 25.dp).testTag("viewOnMapButton"),
      horizontalAlignment = Alignment.End) {
        ElevatedButton(
            onClick = { isMapDisplayed.value = true },
            contentPadding = PaddingValues(all = 3.dp),
            modifier = Modifier.width(130.dp).height(40.dp),
            colors = ButtonDefaults.buttonColors(containerColor = PrimaryBlue),
...
    currentUser: UserModel?,
    isOnline: ConnectionState
) {
  Row(verticalAlignment = Alignment.CenterVertically) {
    DiffAndRating(activityToDisplay = activityToDisplay)
    Spacer(modifier = Modifier.padding(6.dp))
    AddRatingButton(
        activityToDisplay,
        { isReviewing.value = true },
        isReviewing,
        text,
        writeNewRating,
        currentUser,
...
        Difficulty.NORMAL -> OrangeDifficulty
        Difficulty.HARD -> RedDifficulty
      }
  ElevatedButton(
      onClick = { updateDifficulty(activityToDisplay.activityId) },
      contentPadding = PaddingValues(all = 3.dp),
      modifier = Modifier.width(80.dp).height(24.dp).testTag("elevatedTestTag"),
      colors = ButtonDefaults.buttonColors(containerColor = difficultyColor),
      enabled = isOnline == ConnectionState.CONNECTED) {
        Text(
            activityToDisplay.difficulty.toString(),
            style =
                TextStyle(
...
    navigateBack: () -> Unit,
    isOnline: ConnectionState
) {
  val openDialog = remember { mutableStateOf(false) }
  ShareOptionsDialog(activityToDisplay, openDialog, friends, shareToFriend)

  Row(modifier = Modifier.fillMaxWidth().testTag("Top Bar")) {
    TopBarLogo(Icons.AutoMirrored.Outlined.ArrowBack, { navigateBack() }, ConnectionState.CONNECTED)
    Spacer(modifier = Modifier.weight(1f))
    TopBarLogo(R.drawable.download_button, false, { downloadActivity(activityToDisplay) }, isOnline)
    TopBarLogo(Icons.Outlined.Share, { openDialog.value = true }, isOnline)
    // if activity is in favorites, display the filled heart, else display the empty heart
    if (favorites.contains(activityToDisplay.activityId)) {
...
        ActivityType.HIKING -> R.drawable.hiking_roundicon
        ActivityType.CLIMBING -> R.drawable.climbing_roundicon
        ActivityType.BIKING -> R.drawable.biking_roundicon
      }
  val testTag =
      when (activityToDisplay.activityType) {
        ActivityType.HIKING -> "HikingPicture"
        ActivityType.CLIMBING -> "ClimbingPicture"
        ActivityType.BIKING -> "BikingPicture"
      }
  Column {
    Image(
        painter = painterResource(id = defaultId),
        contentDescription = "Default Activity Picture",
        modifier = Modifier.size(65.dp).testTag(testTag))
...
    activityToDisplay: Activity,
    text: MutableState<String>,
    currentUser: UserModel?,
    writeNewRating: (String, Rating, String) -> Unit,
    isOnline: ConnectionState
) {
  ModalBottomSheet(
      onDismissRequest = { isReviewing.value = false }, modifier = Modifier.fillMaxWidth()) {
        Column(
            modifier = Modifier.padding(30.dp).testTag("ModalBottomSheet"),
            horizontalAlignment = Alignment.CenterHorizontally) {
              val selectedStarCount = remember { mutableIntStateOf(1) }
              Text(
...
              Row(
                  horizontalArrangement = Arrangement.SpaceAround,
                  verticalAlignment = Alignment.CenterVertically) {
                    Text(
                        text = LocalContext.current.getString(R.string.ask_rating),
                        style = TextStyle(fontSize = 16.sp, fontWeight = FontWeight.Medium))
                    StarButtons(selectedStarCount = selectedStarCount, isOnline)
                  }

              OutlinedTextField(
                  value = text.value,
                  label = { Text(text = LocalContext.current.getString(R.string.ask_comment)) },
                  onValueChange = { text.value = it },
...
                              selectedStarCount.intValue.toString()),
                          string)
                    }

                    isReviewing.value = false
                  },
                  modifier = Modifier.fillMaxWidth().padding(top = 10.dp).testTag("PublishButton"),
                  colors =
                      ButtonDefaults.buttonColors(
                          containerColor = PrimaryBlue, contentColor = Color.White)) {
                    Text(
                        text = LocalContext.current.getString(R.string.publish),
                        style = TextStyle(fontSize = 16.sp, fontWeight = FontWeight.Bold))
...
fun RatingCard(rating: Rating, usersList: List<UserModel?>) {
  Card(
      modifier =
          Modifier.fillMaxWidth()
              .padding(vertical = 8.dp, horizontal = 16.dp)
              .clickable(onClick = {})
              .testTag("RatingCard"),
      shape = RoundedCornerShape(8.dp),
      elevation = CardDefaults.cardElevation(defaultElevation = 2.dp),
      colors =
          CardDefaults.cardColors(
              containerColor = MaterialTheme.colorScheme.surface,
              contentColor = MaterialTheme.colorScheme.onSurface,
...
