...
      properties = DialogProperties(dismissOnBackPress = true, dismissOnClickOutside = true)) {
        Card(
            modifier =
                Modifier.fillMaxWidth()
                    .fillMaxHeight(0.6f)
                    .padding(16.dp)
                    .testTag("friendSharePicker"),
            shape = RoundedCornerShape(16.dp),
        ) {
          Text(
              text = LocalContext.current.getString(R.string.select_friend),
              style = MaterialTheme.typography.titleLarge,
              textAlign = TextAlign.Center,
...
