...
  if (weatherForecast != null) {
    val finalTemp = kelvinToCelsius(weatherForecast.main.temp)

    // display the forecast
    Card {
      Column(
          modifier = Modifier.padding(8.dp).fillMaxWidth().testTag("forecast"),
          verticalArrangement = Arrangement.Center,
          horizontalAlignment = Alignment.CenterHorizontally) {
            Text(
                text =
                    "${LocalContext.current.getString(R.string.forecasted_weather)} ${LocalContext.current.getString(R.string.at_hour)} $date",
            )
...
